# bug-conan-transitive-deps

dep/: CMakeLists.txt  conanfile.py
dep/code/src/dep/: Dep.cpp  Dep.hpp
main/: CMakeLists.txt  conanfile.py
main/code/src/main/: Main.cpp
